--- a/src/index.htm
+++ b/src/index.htm
@@ -10,7 +10,8 @@
   <h1>Webpack - TypeScript - Scss</h1>
   <h2>TypeScript Hello World</h2>  
   <div id="content"></div>
-    
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <div id="chart_div" style="width: 100%; height: 500px;"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
