--- a/src/index.htm
+++ b/src/index.htm
@@ -3,15 +3,18 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Coding Template</title>
+  <img src="hor.png" alt="horizon" width="42" height="42">
   <link rel="stylesheet" type="text/css" href="bundle.css">
 </head>
 
-<body>
+<body id="body" style="background-color:grey;">
   <h1>Webpack - TypeScript - Scss</h1>
   <h2>TypeScript Hello World</h2>  
   <div id="content"></div>
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  <div id="chart_div" style="width: 100%; height: 500px;"></div>
+  
+  <body id=" vechetam">
+
+  </body>
   <script src="bundle.js"></script>
 </body>
 </html>
