--- a/src/index.htm
+++ b/src/index.htm
@@ -7,9 +7,15 @@
   <link rel="stylesheet" type="text/css" href="bundle.css">
 </head>
 
-<body id="body" style="background-color:grey;">
-  <h1>Webpack - TypeScript - Scss</h1>
-  <h2>TypeScript Hello World</h2>  
+<body id="thebody" style="background-color:white;">
+  <h1>HorizonUP</h1>
+  <h2>VAB team - motion sickness app</h2>  
+
+
+
+
+
+
   <div id="content"></div>
   
   <body id=" vechetam">
